Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131265

qtscxml fails after moc changes

XMLWordPrintable

    • 1
    • 2688d1bbc (dev)
    • Foundation Sprint 119, Foundation Sprint 120

      The code generator in Qt SCXML includes

          fprintf(out, "\n);\n"
                  "#else  // !QT_MOC_HAS_STRINGDATA\n");
          fprintf(out, "#error \"qtmochelpers.h not found or too old.\"\n");
          fprintf(out, "#endif // !QT_MOC_HAS_STRINGDATA\n");
          fprintf(out, "} // unnamed namespace\n\n");
      

      and that generated code will fail to build after the recent changes to moc.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            vhilshei Volker Hilsheimer
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes