Adjust to moc changes

Commit qtbase/c17c69c2ed390c9fb5451f1d02f255548fed054e removed the
QT_MOC_HAS_STRINGDATA definition, so we need to adjust accordingly

Fixes: QTBUG-131265
Change-Id: I6483d1136ff663321794a33a9be5736f2b25defc
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>